Fixed issue with text not showing, it was white on white background

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 * {
     color: white;
+    background: black;
+    text-align: center;
 };
 
 .download_link {
